apt (0.9.11.3) unstable; urgency=low

  [ Michael Vogt ]
  * Add DPkgPM::Progress option to enable terminal install 
    progress
  * fix typo (mkostemp->mkstemp)
  * Remove invalid "-f" option for apt-get check, thanks to
    Philipp Weis (closes: #721477)

  [ David Kalnischkies ]
  * use FileFd in HashSum test to unbreak non-linux ports.
    Thanks to Aaron M. Ucko (Closes: 721723)

 -- Michael Vogt <mvo@debian.org>  Tue, 10 Sep 2013 17:32:02 +0200

apt (0.9.11.2) unstable; urgency=low

  [ Milo Casagrande ]
  * Update Italian translation. Closes: #721030
  
  [ Trần Ngọc Quân ]
  * Update Vietnamese translation. Closes: #720752
  
  [ Michael Vogt ]
  * dselect/install:
   - remove "-f" option for apt-get clean/auto-clean (closes: #720532)
  * apt-private/private-cmndline.cc:
    - fix typo in CmdMatches() selection for dselect-upgrade (closes: #720532)
  * use SPtr<pkgProblemResolver> in DoInstall() to simplify the code
  * allow pkg manipulation in the upgrade/dist-upgrade commandline, like
    apt-get dist-upgrade 2vcard- 4g8+ (thanks to Thorsten Glaser for the
    suggestion)

  [ Angel Guzman Maeso ]
  * replace usage of potential dangerous mktemp with mkstemp

 -- Michael Vogt <mvo@debian.org>  Sat, 31 Aug 2013 16:45:31 +0200

apt (0.9.11.1) unstable; urgency=low

  [ Michael Vogt ]
  * more coverity fixes:
    - explicit init 
    - always chdir("/") after chroot()
    - ftparchive/override.cc: fix "skip empty lines" code, the pointer 
      needs to get de-referenced first
  * dselect/update: 
    - remove "-f" option for apt-get update to fix breakage (closes: 720532)

  [ Christopher Baines ]
  * Add test for bug #507998

  [ David Kalnischkies ]
  * add a breaks libapt-inst for FileFd changes in 0.9.9 (Closes: 720449)
  * add versions to manpages-it Replaces+Breaks

  [ Ángel Guzmán Maeso ]
  * apt-pkg:contrib Avoid compiler warning about sign-compare

 -- Michael Vogt <mvo@debian.org>  Sat, 24 Aug 2013 09:13:27 +0200
