@@ -6,6 +6,8 @@ apt (0.9.11.3) unstable; urgency=low
   * fix typo (mkostemp->mkstemp)
   * Remove invalid "-f" option for apt-get check, thanks to
     Philipp Weis (closes: #721477)
+  * Fix regression of "apt-cache unmet -i", thanks to Daniel Schepler
+    (closes: #722324)
 
   [ David Kalnischkies ]
   * use FileFd in HashSum test to unbreak non-linux ports.
